# renderer

./: CMakeLists.txt
src/: linear.c  linear.h  main.c  obj.c  obj.h  platform.h  render.c  render.h  stretchy.c  stretchy.h
